# EDAutoMission

./: .gitignore  LICENSE  README.md  helper_functions.py  horizons_helper.py  main.py  mission_registry.py  mission_runner.py  odyssey_helper.py  pyproject.toml  requirements.txt  tab_to.py
ed_auto_mission/: __init__.py  main.py
ed_auto_mission/adapters/: __init__.py  game.py
ed_auto_mission/core/: __init__.py  category_navigator.py  config.py  coordinates.py  mission_registry.py  mission_runner.py  types.py
ed_auto_mission/gui/: __init__.py  app.py  dialogs.py  runner.py
ed_auto_mission/services/: __init__.py  discord.py  input.py  ocr.py  process.py  screen.py  timing.py  window.py
